force-app/main/default/objects/Dummy05__c/Dummy05__c.object-meta.xml
<CustomObject>
    <label>Dummy05</label>
    <nameField>
        <label>Dummy05 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dummy05</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>