force-app/main/default/objects/Dummy05__c/fields/FooBar027__c.field-meta.xml
<CustomField>
    <fullName>FooBar027__c</fullName>
    <label>FooBar027</label>
    <length>255</length>
    <type>Text</type>
</CustomField>