force-app/main/default/objects/Dummy05__c/fields/FooBar054__c.field-meta.xml
<CustomField>
    <fullName>FooBar054__c</fullName>
    <label>FooBar054</label>
    <length>255</length>
    <type>Text</type>
</CustomField>