force-app/main/default/objects/Dummy05__c/fields/FooBar140__c.field-meta.xml
<CustomField>
    <fullName>FooBar140__c</fullName>
    <label>FooBar140</label>
    <length>255</length>
    <type>Text</type>
</CustomField>